# tbs-tcg

./: .gitignore  Cargo.toml  README.md  imgui.ini
assets/models/: torus.mtl
assets/shaders/: basic.frag  basic.vert  imgui.frag  imgui.vert  post.frag  post.vert  trivial.frag  trivial.vert
src/: gui.rs  main.rs  render.rs  shade.rs  util.rs
src/render/: bytes.rs  cache.rs  camera.rs  core.rs  gui.rs  shade.rs  window.rs
src/render/cache/: models.rs  shaders.rs  textures.rs
src/render/gui/: imgui_wgpu.rs
src/render/window/: gui.rs
src/util/: bytes.rs
