[package]
name = "tbs-tcg"
version = "0.1.0"
authors = ["Devin Hill <98devin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.3.0"
imgui-wgpu = "0.6.0"
wgpu = "0.5.0"
winit = "~0.21"
rlua = "0.17.0"

[dependencies.imgui-winit-support]
version = "0.3.1"

[dependencies.async-std]
version = "1.5.0"
features = ["attributes"]
