[package]
name = "tbs-tcg"
version = "0.1.0"
authors = ["Devin Hill <98devin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "~0.3"
imgui-wgpu = "0.6.0"
wgpu = "0.5.0"
winit = "~0.21"
rlua = "0.17.0"
imgui-winit-support = "~0.3"
futures = "0.3.5"
hecs = "0.2.12"
shaderc = "0.6.2"
chashmap = "2.2.2"
parking_lot = "0.10.2"
bytemuck = "1.2.0"
