[package]
name = "tbs-tcg"
version = "0.1.0"
authors = ["Devin Hill <98devin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imgui = "0.4.0"
winit = "0.22.2"
rlua = "0.17.0"
imgui-winit-support = "0.4.0"
futures = "0.3.5"
hecs = "0.2.12"
shaderc = "0.6.2"
chashmap = "2.2.2"
parking_lot = "0.10.2"
cgmath = "0.17.0"
nalgebra-glm = "0.7.0"
image = "0.23.6"
tobj = "2.0.2"
anyhow = "1.0.31"

[dependencies.wgpu]
git = "https://github.com/gfx-rs/wgpu-rs"
branch = "master"
